--- a/app/src/main/res/layout-v21/fragment_home.xml
+++ b/app/src/main/res/layout-v21/fragment_home.xml
@@ -75,6 +75,14 @@
                     android:textSize="@dimen/medium_text"
                     android:text="@string/city_placeholder"/>
                 <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ambient_light"
+                    android:textColor="@android:color/white"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/small_text"
+                    />
+                <TextView
                     android:id="@+id/temperature"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
